<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <EditTextPreference
    android:defaultValue="HC-06"
    android:inputType="text"
    android:key="BLUETOOTH_ID"
    android:maxLines="1"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:title="@string/pref_title_bluetooth_id"/>

  <EditTextPreference
    android:defaultValue="1"
    android:inputType="numberDecimal"
    android:key="GATE_SECONDS"
    android:maxLines="1"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:id="@+id/edit_gate_seconds"
    android:title="@string/pref_title_frequency_gate_counter"/>

  <ListPreference
    android:defaultValue="0"
    android:entries="@array/pref_reference_frequency_titles"
    android:entryValues="@array/pref_reference_frequency_values"
    android:key="REFERENCE_FREQUENCY_SOURCE"
    android:negativeButtonText="@null"
    android:positiveButtonText="@null"
    android:title="@string/pref_title_reference_frequency_source"/>

  <ListPreference
    android:defaultValue="0"
    android:entries="@array/pref_filter_bandwidth_titles"
    android:entryValues="@array/pref_filter_bandwidth_values"
    android:key="REFERENCE_FILTER"
    android:negativeButtonText="@null"
    android:positiveButtonText="@null"
    android:title="@string/pref_title_reference_filter_bandwidth"/>

  <ListPreference
    android:defaultValue="0"
    android:entries="@array/pref_filter_bandwidth_titles"
    android:entryValues="@array/pref_filter_bandwidth_values"
    android:key="SAMPLE_FILTER"
    android:negativeButtonText="@null"
    android:positiveButtonText="@null"
    android:title="@string/pref_title_sample_filter_bandwidth"/>

</PreferenceScreen>
